# snipster

./: .gitignore  Makefile  README.md  pyproject.toml  snippets.db  streamlit_app.py  test_from_env.db
.github/workflows/: tests.yml
data/: all_snippets.jsonl
src/snipster/: __init__.py  cli.py  database_manager.py  exceptions.py  models.py  streamlit_app.py  types.py
src/snipster/api/: dependencies.py  main.py  routes.py  schemas.py
src/snipster/repositories/: backend.py  in_memory_repository.py  json_repository.py  repository.py  sql_model_repository.py
src/tests/: test_database_manager.py  test_models.py
src/tests/repositories/: test_in_memory_snippet_repository.py  test_json_snippet_repository.py  test_sql_model_repository.py
tests/: test_backend.py  test_cli.py  test_database_manager.py  test_models.py  test_types.py
tests/api/: test_routes.py
tests/repositories/: test_in_memory_snippet_repository.py  test_json_snippet_repository.py  test_sql_model_repository.py
