[project]
name = "snipster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sl2902", email = "" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "sqlmodel>=0.0.27",
    "python-decouple==3.8",
    "typer>=0.21.0",
    "rich>=14.2.0",
    "fastapi[all]>=0.128.0",
]

[project.scripts]
snipster = "snipster.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.coverage.run]
omit = [
    "src/snipster/api/main.py",
]
